<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/spacing_s"
    android:paddingRight="@dimen/spacing_s"
    android:paddingBottom="@dimen/spacing_s"
    android:paddingTop="@dimen/spacing_s" />