<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:iconifiedByDefault="true" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height_l"
        android:layout_marginTop="@dimen/spacing_m"
        android:visibility="gone"
        app:matProg_barColor="@color/colorPrimary"
        app:matProg_progressIndeterminate="true" />
</LinearLayout>